--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
 
     <div id="container"></div>
 
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
-    <script src="/scripts/app.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
+    <script src="bundle.js"></script>
 </body>
 
 </html>
